Create the getAllMembers Controller/Service/MerbersDB methods and Adding the endpoint route
