# src/v1/routes/workoutRoutes.ts
@@ -2,6 +2,7 @@ import express from "express";
 import apicache from "apicache";
 import { createNewWorkout, deleteOneWorkout, getAllWorkouts, getOneWorkout, updateOneWorkout } from "../../controllers/workoutController.js";
 import { getRecordsForWorkout } from "../../controllers/recordController.js";
+import { getAllMembers } from "../../controllers/memberController.js";
 
 const router = express.Router();
 const cache = apicache.middleware;
@@ -9,7 +10,7 @@ const cache = apicache.middleware;
 router
     .get("/", cache("2 minutes"), getAllWorkouts)
     
-    .get("/", getAllWorkouts)
+    .get("/members", getAllMembers)
 
     .get("/:workoutId", getOneWorkout)
     
@@ -21,4 +22,4 @@ router
 
     .delete("/:workoutId", deleteOneWorkout);
 
-    export default router;
+export default router;
