# src/v1/swagger.json
@@ -71,6 +71,19 @@
         }
       }
     },
+    "/members": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/{workoutId}": {
       "get": {
         "description": "",
